--- a/api/.env
+++ b/api/.env
@@ -1,14 +1,7 @@
 # Nutritionix API Keys
-NUTRITIONIX_APP_ID=your_actual_nutritionix_app_id
-NUTRITIONIX_APP_KEY=your_actual_nutritionix_app_key
+NUTRITIONIX_APP_ID=00b81cef
+NUTRITIONIX_APP_KEY=80416230649f21a0e529b38d18574c1c
 
 # Edamam Meal Planner API Keys
-EDAMAM_APP_ID=your_actual_edamam_app_id
-EDAMAM_APP_KEY=your_actual_edamam_app_key
-
-# JWT Secret Key
-JWT_SECRET=your_random_secret_key
-
-# Firebase API (Optional, if using Firebase)
-FIREBASE_API_KEY=your_firebase_api_key
-FIREBASE_AUTH_DOMAIN=your_project_id.firebaseapp.com
+EDAMAM_APP_ID=70a6ee50
+EDAMAM_APP_KEY=187e5d6682376ce9ff06148fe538e51c
